--- a/SME.Integracao.Serap.Worker/Dockerfile
+++ b/SME.Integracao.Serap.Worker/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["SME.Integracao.Serap.Worker\SME.Integracao.Serap.Worker.csproj", "src/SME.Integracao.Serap.Worker/"]
+COPY ["SME.Integracao.Serap.Worker/SME.Integracao.Serap.Worker.csproj", "src/SME.Integracao.Serap.Worker/"]
 COPY ["SME.Integracao.Serap.IoC/SME.Integracao.Serap.IoC.csproj", "src/SME.Integracao.Serap.IoC/"]
 COPY ["SME.Integracao.Serap.Dados/SME.Integracao.Serap.Dados.csproj", "src/SME.Integracao.Serap.Dados/"]
 COPY ["SME.Integracao.Serap.Infra/SME.Integracao.Serap.Infra.csproj", "src/SME.Integracao.Serap.Infra/"]
