--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
  
   deploy-release:
   
-    runs-on: master
+    runs-on: self-hosted
     if: ${{ github.ref == 'refs/heads/release' }}
     needs: [ build ]    
     environment:
