--- a/SME.Integracao.Serap.Infra/SME.Integracao.Serap.Infra.csproj
+++ b/SME.Integracao.Serap.Infra/SME.Integracao.Serap.Infra.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Elastic.Apm.NetCoreAll" Version="1.14.0" />
     <PackageReference Include="FluentValidation" Version="10.3.6" />
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.20.0" />
   </ItemGroup>
 
   <ItemGroup>
