Ajuste projeto worker

--- a/SME.Integracao.Serap.Worker/SME.Integracao.Serap.Worker.csproj
+++ b/SME.Integracao.Serap.Worker/SME.Integracao.Serap.Worker.csproj
@@ -6,6 +6,10 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerfileContext>..\..</DockerfileContext>
+    <ApplicationIcon />
+    <OutputType>Exe</OutputType>
+    <StartupObject />
+    <EnableNETAnalyzers>false</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
