--- a/SME.Integracao.Serap.Aplicacao/SME.Integracao.Serap.Aplicacao.csproj
+++ b/SME.Integracao.Serap.Aplicacao/SME.Integracao.Serap.Aplicacao.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.3.6" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
