--- a/SME.Integracao.Serap.Aplicacao/SME.Integracao.Serap.Aplicacao.csproj
+++ b/SME.Integracao.Serap.Aplicacao/SME.Integracao.Serap.Aplicacao.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -16,8 +16,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Interfaces\" />
     <Folder Include="Queries\" />
     <Folder Include="UseCase\Deadletter\" />
   </ItemGroup>
