--- a/SME.Integracao.Serap.Infra/SME.Integracao.Serap.Infra.csproj
+++ b/SME.Integracao.Serap.Infra/SME.Integracao.Serap.Infra.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Dtos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SME.Integracao.Serap.Dominio\SME.Integracao.Serap.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
