Downgrade de versao Ajuste Docker file e Log de execução

--- a/SME.Integracao.Serap.Worker/Dockerfile
+++ b/SME.Integracao.Serap.Worker/Dockerfile
@@ -1,9 +1,9 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base   
+FROM mcr.microsoft.com/dotnet/aspnet:3.1-bionic AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:3.1-bionic AS build
 WORKDIR /src
 COPY ["SME.Integracao.Serap.Worker/SME.Integracao.Serap.Worker.csproj", "src/SME.Integracao.Serap.Worker/"]
 COPY ["SME.Integracao.Serap.IoC/SME.Integracao.Serap.IoC.csproj", "src/SME.Integracao.Serap.IoC/"]
