--- a/SME.Integracao.Serap.Aplicacao/SME.Integracao.Serap.Aplicacao.csproj
+++ b/SME.Integracao.Serap.Aplicacao/SME.Integracao.Serap.Aplicacao.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Queries\" />
+    <Folder Include="Queries\SysUnidadeAdministrativa\Serap\" />
     <Folder Include="UseCase\Deadletter\" />
   </ItemGroup>
 
