--- a/SME.Integracao.Serap.Dados/SME.Integracao.Serap.Dados.csproj
+++ b/SME.Integracao.Serap.Dados/SME.Integracao.Serap.Dados.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Dapper.FluentMap.Dommel" Version="2.0.0" />
+    <PackageReference Include="Dommel" Version="3.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
