--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD - Release & Production
 on:
 
   push:
-    branches: [ main, master, release ]
+    branches: [ main, master, release, release-r2 ]
     paths-ignore:
     - ".github/workflows/**"  
   
@@ -43,6 +43,22 @@ jobs:
           RANCHER_TOKEN: ${{ secrets.RANCHER_TOKEN }}
           WORKLOAD: serap-integracao
           NAMESPACE: sme-serap
+          
+  deploy-release-r2:
+  
+    runs-on: self-hosted
+    if: ${{ github.ref == 'refs/heads/release-r2' }}
+    needs: [ build ]    
+    environment:
+      name: release
+    steps:
+      - name: Redeploy
+        uses: luizhpriotto/action_images@kubectl-v1.0
+        env: 
+          RANCHER_URL: ${{ secrets.RANCHER_URL }}
+          RANCHER_TOKEN: ${{ secrets.RANCHER_TOKEN }}
+          WORKLOAD: serap-integracao
+          NAMESPACE: sme-serap-r2
           
   deploy-master:
   
